# ci-cd-workshop

./: README.md  promConfig.txt
anomaly-pl/: output.csv  pyproject.toml  script.sh  udf.py
anomaly-pl/manifests/: pipeline.yaml
manifests/: rollouts_ingress.yaml
metrics-app/: Dockerfile  deployment.yaml  flask_prometheus.py  requirements.in  requirements.txt
metrics-app/manifests/: deployment.yaml  service.yaml  serviceMonitor.yaml
prom-kafka-writer/: deployment.yaml  service.yaml
prom-kafka-writer/manifests/: config.yaml
